# etl-csv2postgres

./: README.md  etl.ipynb  pyproject.toml
