[tool.poetry]
name = "etl-project"
version = "0.1.0"
description = ""
authors = ["thujuli <thujuli037@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pandas = "^2.1.1"
jupyterlab = "^4.0.6"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
